fix: change modal position from fixed to absolute and update z-index

--- a/Frontend/src/components/game/game-board/clickModal/ClickModalList.module.css
+++ b/Frontend/src/components/game/game-board/clickModal/ClickModalList.module.css
@@ -4,16 +4,17 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  position: fixed;
+  position: absolute;
   cursor: default;
   width: 200px;
+  height: auto;
   background-color: rgba(255, 255, 255, 0.85);
   border: 0.5rem double var(--color-red);
   border-radius: 1rem;
   corner-shape: superellipse(0);
   padding: 0.75rem;
   box-shadow: 0px 0px 15px rgba(198, 40, 40, 0.5);
-  z-index: 1000;
+  z-index: 9999;
   ::before {
     position: absolute;
     content: "";
